# plasticparcels

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  PlasticParcels_DRAKKAR_demo.ipynb  PlasticParcels_cleanup.ipynb  README.md  codecov.yml  environment.yml  example_PlasticParcels_Italy.ipynb  example_PlasticParcels_Italy_Lorenz.ipynb  pyproject.toml  testing.ipynb
.github/actions/install-plasticparcels/: action.yml
.github/workflows/: linting.yml  unit_tests.yml
PlasticParcels/: constructors.py  create_masks.py  create_release_locations.py  create_settings.ipynb  default_settings.json  kernels.py  local_settings.json  lorenz_settings.json  utils.py
PlasticParcels/release/: create_fisheries_release.ipynb  create_masks.ipynb  ocean_vector_testing.ipynb
PlasticParcels/trajectory/: helper.py  kernels.py
docs/: conf.py  environment_docs.yml  examples.rst  index.rst  initialisationmaps.md  physicskernels.md  reference.rst
docs/examples/: PlasticParcels_cleanup.ipynb  README.md  create_idealised_data.ipynb  default_settings.json  example_Croatian_fisheries.ipynb  example_Greece_coast.ipynb  example_Greece_coast_settings.json  example_Italy_coast.ipynb  example_PlasticParcels_Italy_Lorenz.ipynb  example_add_your_own_kernel.ipynb  example_add_your_own_kernel_settings.json  example_idealised_flow.ipynb  example_idealised_flow.py  example_idealised_flow_functions.py  example_initialisation_maps.ipynb  example_make_your_own_kernel.ipynb  idealised_flow.py  local_settings.json  lorenz_settings.json  presentation_example_PlasticParcels_Italy_Lorenz.ipynb
docs/paper/: paper.bib  paper.md
docs/reference/: constructors.rst  index.rst  kernels.rst  particlefile.rst  utils.rst
paper/: paper.bib  paper.md
plasticparcels/: __init__.py  constructors.py  create_masks.py  create_settings.ipynb  download_data.py  kernels.py  lorenz_settings.json  particlefile.py  utils.py
plasticparcels/release/: create_coastal_release.ipynb  create_masks.ipynb  remap_T_to_indices.ipynb
plasticparcels/scripts/: create_masks.py  create_release_maps.py
src/DRAKKAR workshop code/: PlasticParcels.ipynb  PlasticParcels_DRAKKAR_tutorial.ipynb  testing_kernels_compilation.ipynb  testing_release_locations.ipynb  testing_select_files.ipynb
src/DRAKKAR workshop code/PlasticParcels/: helper.py  kernels.py  utils.py
src/data_subsets/: create_fisheries_subset.ipynb  create_hydrodynamics_subsets.ipynb  create_hydrodynamics_subsets_land current.ipynb  create_hydrodynamics_subsets_lorenz.ipynb
src/release/: create_coastal_release.ipynb  create_coastal_release_testing.ipynb  create_coastal_release_testing2.ipynb  create_fisheries_release.ipynb  create_masks.ipynb  create_river_release.ipynb  testing_create_coastal_release.ipynb
src/test/: test_stokes_drift.py
src/trajectory/: Kernels_testing.ipynb  PlasticParcels.ipynb  PlasticParcels_DRAKKAR_demo.ipynb  helper.py  kernels.py  testing_kernels_compilation.ipynb  testing_release_locations.ipynb
tests/: pyproject.toml  test_constructors.py  test_initialisationmaps.py  test_kernels.py  test_settings.py
tests/test_data/: test_KZ_2020-01-01.nc  test_KZ_2020-01-04.nc  test_KZ_2020-01-05.nc  test_S_2020-01-01.nc  test_S_2020-01-04.nc  test_S_2020-01-05.nc  test_T_2020-01-01.nc  test_T_2020-01-04.nc  test_T_2020-01-05.nc  test_U_2020-01-01.nc  test_U_2020-01-04.nc  test_U_2020-01-05.nc  test_V_2020-01-01.nc  test_V_2020-01-04.nc  test_V_2020-01-05.nc  test_W_2020-01-01.nc  test_W_2020-01-04.nc  test_W_2020-01-05.nc  test_bathymetry_mesh_zgr.nc  test_bgc_mesh_hgr.nc  test_nppv_2020-01-04.nc  test_nppv_2020-01-05.nc  test_ocean_mesh_hgr.nc  test_phy2_2020-01-04.nc  test_phy2_2020-01-05.nc  test_phy_2020-01-04.nc  test_phy_2020-01-05.nc  test_settings.json  test_waves_2020-01-04.nc  test_wind_2020-01-04.nc
